--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-MPG0ZKFB30"></script>
+	<script>
+  		window.dataLayer = window.dataLayer || [];
+  		function gtag(){dataLayer.push(arguments);}
+ 		 gtag('js', new Date());
+
+ 		 gtag('config', 'G-MPG0ZKFB30');
+	</script>
 	<title>ОТРЯД ПРИМАТ</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="shortcut icon" href="images/logo.png" type="image/png">
