--- a/index.html
+++ b/index.html
@@ -57,6 +57,13 @@
   		});
 	});
 	</script>
+        <script type="text/javascript">
+        <!--
+        if (screen.width <= 699) {
+        document.location = "mobile.html";
+        }
+        //-->
+        </script>
 </head>
 <body>
 	<header>
